Set the DTEP of the document to the one selected in the Quick Start dialog. Requires a newly introduced WindowManagerIf::setDtep DCOP method. Fix the nickname of XHTML 1.0 Basic.

BUG: 118814